# case-board

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
scripts/: release.sh
scripts/pr/: .gitkeep  pr-create.ps1  pr-prepare.ps1  pr-push.ps1  pr-verify.ps1  upstream-watch.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0029_court_filing_jobs.sql  0030_lawyer_profiles.sql  0031_contract_drafts.sql  0032_contract_preferences.sql  0034_document_display_name.sql  0035_document_bookmarks.sql  0036_feishu_reminder_runs.sql
src-tauri/resources/templates/: private_lending_element.docx
src-tauri/src/: court_filing_env.rs  doc_search.rs  docx_extract.rs  element_convert.rs  feishu.rs  feishu_reminder.rs  lib.rs  settings.rs  verify.rs
src-tauri/src/case_bundle/: mod.rs
src-tauri/src/chat/: agent_loop.rs  commands.rs  loop_guard.rs  model_router.rs
src-tauri/src/contract_draft/: generate.rs  mod.rs
src-tauri/src/db/: bookmarks.rs  case_logs.rs  cases.rs  contract_drafts.rs  contract_preferences.rs  court_filing.rs  document_tags.rs  documents.rs  lawyer_profiles.rs  mod.rs
src-tauri/src/diagnostic_log/: mod.rs
src-tauri/src/feedback/: mod.rs
src-tauri/src/ingest/: case_split.rs  extractor.rs  global_pipeline.rs  ocr.rs  paddle_vl_http.rs  pipeline.rs  scanner.rs
src-tauri/src/llm/: global_extract.rs  mod.rs  organize.rs  prompts.rs  providers.rs  work_log.rs
src-tauri/src/local_kb/: experience.rs  semantic.rs
src-tauri/src/ticktick/: client.rs  mod.rs  state.rs
src/components/: CalendarBoard.tsx  HomeView.tsx  LawyerProfilesCard.tsx  OnboardingWizard.tsx  PdfReaderView.tsx  SettingsModal.tsx  SourceDocumentViewerDrawer.tsx  SplitImportDialog.tsx  TickTickPanel.tsx  homeHearingDetails.ts
src/lib/: api.ts  caseSnapshot.ts  featureFlags.ts  ticktickApi.ts  types.ts  uiScale.ts  utils.ts
src/modules/execution/: ExecutionDetailView.tsx
src/modules/litigation/components/: CaseView.tsx  CaseWorkLogSection.tsx  CourtFilingSection.tsx  ProgressBanner.tsx  SourceFilesSection.tsx
src/modules/litigation/components/chat/: CaseChatPanel.tsx  ChatWindowErrorBoundary.tsx  DetachedChatWindow.tsx
src/modules/litigation/components/snapshot/: CaseSnapshotView.tsx
src/modules/litigation/lib/: docMarks.ts
src/modules/tools/: CaseBundleTool.tsx  CourierTool.tsx  CourtFilingEnvPanel.tsx  CourtFilingTool.tsx  ElementConvertWorkbench.tsx  FeishuCalendarTool.tsx  ToolsModule.tsx
src/modules/tools/calculators/: LaborSeveranceCalculator.tsx  TrafficAccidentCompensationCalculator.tsx
src/modules/tools/components/: LegalToolCard.tsx
src/modules/tools/lib/: laborSeverance.ts  legalBasisData.ts  trafficAccident.ts
src/modules/transaction/: ContractDraftTool.tsx  TransactionModule.tsx
standalone/court_filing_cli/: __init__.py  __main__.py  browser.py  captcha_manual.py  captcha_recognizer.py  cli.py  cookie_service.py  env_check.py  progress.py  pyproject.toml  runner.py  schemas.py
standalone/court_filing_cli/sites/: __init__.py  court_zxfw.py
standalone/court_filing_cli/sites/court_zxfw_filing/: __init__.py  filing_steps.py  form_utils.py  party_info_handler.py  progress_reporter.py  service.py
